# robust-german-morpheme-analyzer

./: .gitattributes  .gitignore  DEVELOPMENT.md  README.md  counter-description.txt  description_reference_counter.txt  ecology.txt  main.py  morphology_stats.csv  pyproject.toml  sociology_new_roots.csv  test_midword.py
.github/workflows/: checks.yml
data/: input_german.txt  replacements.txt  sociology.txt  source.txt
data/inputs/: ausdauer.txt  dauer.txt  guete.txt  materialeneigenschaft.txt  qualitaet.txt  teilnahme.txt  umwelt.txt
data/inputs_no_subcluster_names/: all_sources.txt  ausdauer.txt  betriebsprozess.txt  dauer.txt  guete.txt  kraft.txt  materialeneigenschaft.txt  qualifikation.txt  qualitaet.txt  teilnahme.txt  umwelt.txt
data/transcripts/: 5_эпизодов_2022.txt  7_эпизодов_2022.txt  Все_эпизоды_C&R.txt
frequency_count/: frequency_ecology_in_text_5_limit_5.csv  frequency_ecology_in_text_7_limit_10.csv  frequency_ecology_in_text_7_limit_5.csv  frequency_ecology_in_text_CR_limit_10.csv  frequency_ecology_in_text_CR_limit_5.csv  frequency_economy_in_text_5_limit_4.csv  frequency_economy_in_text_7_limit_10.csv  frequency_sociology_in_text_5_limit_5.csv  frequency_sociology_in_text_7_limit_4.csv  root_frequencies_5_2022.csv  root_frequencies_CR_2022.csv
inputs/: betriebsprozess.txt  eigenschaft.txt  kraft.txt  prozess.txt  qualifikation.txt
inputs_no_subclaster_names/: economy.txt  eigenschaft.txt  prozess.txt
morphology_stats/: all_sources.csv  all_sources_0-5.csv  betriebsprozess.csv  dauer.csv  ecology.csv  economy.csv  materialeneigenschaft.csv  qualifikation.csv  sociology.csv  teilnahme.csv
morphology_stats_no_subclaster_names/: ausdauer.csv  betriebsprozess.csv  ecology.csv  sociology.csv
morphology_stats_v1/: all_sources.csv  ausdauer.csv  betriebsprozess.csv  dauer.csv  guete.csv  prozess.csv  qualifikation.csv  teilnahme.csv
morphology_stats_v2/: betriebsprozess.csv  dauer.csv  economy.csv  materialeneigenschaft.csv  prozess.csv  qualifikation.csv  sociology.csv  umwelt.csv
results/frequency_count/: frequency_ecology_in_text_5_limit_10.csv  frequency_ecology_in_text_5_limit_4.csv  frequency_ecology_in_text_7_limit_4.csv  frequency_ecology_in_text_CR_limit_4.csv  frequency_economy_in_text_5_limit_10.csv  frequency_economy_in_text_5_limit_4.csv  frequency_economy_in_text_5_limit_5.csv  frequency_economy_in_text_7_limit_4.csv  frequency_economy_in_text_7_limit_5.csv  frequency_economy_in_text_CR_limit_10.csv  frequency_economy_in_text_CR_limit_4.csv  frequency_economy_in_text_CR_limit_5.csv  frequency_sociology_in_text_5_limit_10.csv  frequency_sociology_in_text_5_limit_4.csv  frequency_sociology_in_text_7_limit_10.csv  frequency_sociology_in_text_7_limit_4.csv  frequency_sociology_in_text_7_limit_5.csv  frequency_sociology_in_text_CR_limit_10.csv  frequency_sociology_in_text_CR_limit_4.csv  frequency_sociology_in_text_CR_limit_5.csv  root_frequencies_7_2022.csv
results/morphology_stats/: all_sources_0-25.csv  ausdauer.csv  eigenschaft.csv  guete.csv  kraft.csv  prozess.csv  qualitaet.csv  umwelt.csv
results/morphology_stats_no_subcluster_names/: all_sources.csv  dauer.csv  economy.csv  eigenschaft.csv  guete.csv  kraft.csv  materialeneigenschaft.csv  prozess.csv  qualifikation.csv  qualitaet.csv  teilnahme.csv  umwelt.csv
results/morphology_stats_v1/: eigenschaft.csv  kraft.csv  materialeneigenschaft.csv  qualitaet.csv  umwelt.csv
results/morphology_stats_v2/: all_sources.csv  ausdauer.csv  ecology.csv  eigenschaft.csv  guete.csv  kraft.csv  qualitaet.csv  teilnahme.csv
results/roots/: all_sources_new_roots.csv  ecology_new_roots.csv  economy_new_roots.csv
scripts/: test_midword.py  test_split.py
src/morpheme_analysis/: analyzer.py  analyzer_v1.py  analyzer_v2.py  cli.py  frequency.py  paths.py
