[project]
name = "morpheme-analysis"
version = "0.1.0"
description = "German morpheme analysis scripts and supporting datasets."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Теселкина Ольга Евгеньевна", email = "oteselkina@sfedu.ru" },
    { name = "Ковалев Никита Евгеньевич", email = "nick.tommybee37@gmail.com" },
]
dependencies = [
    "compound-split==1.0.2",
    "HanTa==1.1.2",
    "numpy==2.4.1",
    "ordered-set==4.1.0",
]

[project.scripts]
morpheme-analysis = "morpheme_analysis.cli:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/morpheme_analysis",
    "scripts",
]

[dependency-groups]
dev = [
    "basedpyright",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 119
target-version = "py312"
extend-exclude = [
    "*.csv",
    "*.txt",
    "*.zip",
    "data",
    "results",
]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PIE",
    "PL",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "PLR0912", # Existing analysis functions have several linguistic branches.
    "PLR0915", # Keep initial linting useful before refactoring large scripts.
    "PLR2004", # Numeric linguistic thresholds are acceptable in this prototype.
    "RUF001",  # Cyrillic input filenames are intentional in this project.
]

[tool.ruff.lint.per-file-ignores]
"main_v*.py" = [
    "F841",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = [
    "scripts/*.py",
    "src/**/*.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "data",
    "results",
]
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
]
testpaths = [
    ".",
]
